--- a/index.html
+++ b/index.html
@@ -22,27 +22,32 @@
         <table border="0">
             <tr>
                 <td width="80%">
-                    <font class="edoc-logo">eDoc. </font>
-                    <font class="edoc-logo-sub">| THE ECHANNELING PROJECT</font>
+                    <font class="edoc-logo">Ben Hamida & Tababi Clinique. </font>
+                    <font class="edoc-logo-sub">| THE BEST SERVICES</font>
                 </td>
                 <td width="10%">
-                   <a href="login.php"  class="non-style-link"><p class="nav-item">LOGIN</p></a>
+                   <a href="login.html"  class="non-style-link"><p class="nav-item">LOGIN</p></a>
                 </td>
                 <td  width="10%">
-                    <a href="signup.php" class="non-style-link"><p class="nav-item" style="padding-right: 10px;">REGISTER</p></a>
+                    <a href="register.html" class="non-style-link"><p class="nav-item" style="padding-right: 10px;">REGISTER</p></a>
+                </td>
+                <td  width="10%">
+                    <a href="about_us.html" class="non-style-link"><p class="nav-item" style="padding-right: 10px;">about_us</p></a>
                 </td>
             </tr>
             
             <tr>
                 <td  colspan="3">
-                    <p class="heading-text">Avoid Hassles & Delays.</p>
+                    <p class="heading-text">Welcome !</p>
 
                 </td>
             </tr>
             <tr>
                 <td  colspan="3">
-                    <p class="sub-text2">How is health today, Sounds like not good!<br>Don't worry. Find your doctor online Book as you wish with eDoc. <br>
-                    We offer you a free doctor channeling service, Make your appointment now.</p>
+                    <p class="sub-text2">
+                        How is health today, Sounds like not good!<br/>
+                        Don't worry. Find your doctor online Book as you wish with US.<br/>
+                              Make your appointment now</p>
                 </td>
             </tr>
             <tr>
@@ -62,7 +67,7 @@
                 </td>
             </tr>
         </table>
-        <p class="sub-text2 footer-hashen">A Web Solution by Hashen.</p>
+        <p class="sub-text2 footer-hashen">A Web Solution by Mohamed Khalifa & Anis .</p>
     </center>
     
     </div>
